added collaborator,labels functionality